theme-fun: Fix display of slider on Safari & old versions of Chrome

--- a/static/sass/_fun.scss
+++ b/static/sass/_fun.scss
@@ -589,6 +589,8 @@ body .home {
         text-align: center;
         cursor: pointer;
         float: left;
+        min-width: 180px;
+        min-height: 110px;
     }
 
     .als-prev, .als-next {
